--- a/images.html
+++ b/images.html
@@ -13,7 +13,10 @@
 </head>
 
 <body>
-    <img src="i2.jpg" alt="">
+    <img src="i5.png" alt="">
+    <img src="i1.jpeg" alt="">
+    <!-- svg and image optimization -->
+    <!-- icon sprite -->
 </body>
 
 </html>
