--- a/images.html
+++ b/images.html
@@ -15,8 +15,8 @@
 <body>
     <img src="i5.png" alt="">
     <img src="i1.jpeg" alt="">
-    <!-- svg and image optimization -->
-    <!-- icon sprite -->
+    <!-- svg and image optimization : should be done to compress images-->
+    <!-- icon sprite : is used in game development-->
 </body>
 
 </html>
