--- a/transition.html
+++ b/transition.html
@@ -11,16 +11,17 @@
             
         } */
         .box {
-            width: 100px;
-            height: 100px;
+            width: 150px;
+            height: 150px;
             border: 5px solid crimson;
             background-color: coral;
             transition: width 2s ease, height 2s linear, transform 1s;
+            overflow: scroll;
         }
 
         .box:hover {
-            width: 200px;
-            height: 200px;
+            width: 250px;
+            height: 250px;
             transform: rotate(70deg);
 
         }
