--- a/images.html
+++ b/images.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <img src="i5.png" alt="">
-    <img src="i1.jpeg" alt="">
+    <img src="images/i2.jpg" alt="">
+    <img src="images/i1.jpeg" alt="">
     <!-- svg and image optimization : should be done to compress images-->
     <!-- icon sprite : is used in game development-->
 </body>
