--- a/cricket.html
+++ b/cricket.html
@@ -5,9 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .field {
+            border: 1px solid;
+        }
+
+        .field:hover .bat {
+            transform: rotate(-60deg);
+            transform-origin: top right;
+
+
+        }
+
+        .bat {
+            transition: transform .2s ease-in;
+        }
+
+        .ball {
+            width: 50px;
+            height: 50px;
+            background-color: red;
+            border-radius: 50px;
+            position: relative;
+            left: 365px;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="field">
+        <img class="bat" src="images/bata" height="50%" width="50%" alt="">
+        <div class="ball">
+
+        </div>
+    </div>
+
 
 </body>
 
