--- a/cricket.html
+++ b/cricket.html
@@ -18,7 +18,7 @@
         }
 
         .bat {
-            transition: transform .2s ease-in;
+            transition: transform .2s ease-in .2;
         }
 
         .ball {
@@ -28,6 +28,11 @@
             border-radius: 50px;
             position: relative;
             left: 365px;
+            transition: transform 1s ease-out;
+        }
+
+        .field:hover .ball {
+            transform: translate(800px, -100px);
         }
     </style>
 </head>
