--- a/cricket.html
+++ b/cricket.html
@@ -27,7 +27,7 @@
             background-color: red;
             border-radius: 50px;
             position: relative;
-            left: 365px;
+            left: 800px;
             transition: transform 1s ease-out;
         }
 
@@ -39,7 +39,7 @@
 
 <body>
     <div class="field">
-        <img class="bat" src="images/bata" height="50%" width="50%" alt="">
+        <img class="bat" src="images/bata.png" height="30%" width="30%" alt="">
         <div class="ball">
 
         </div>
