--- a/float.html
+++ b/float.html
@@ -10,9 +10,11 @@
             width: 150px;
             /* min-height(Atleast that height): ; max-width (max will be that): ; */
             min-height: 400px;
+            /* min height must be 400px */
             background-color: lightsteelblue;
             margin: 10px;
             padding: 10px;
+            /* old way  when flex wasnt here to move divs..etc . if we float:right , it starts 1 ,2 ,3,4 from right like arabic */
             float: left;
             cursor: pointer;
 
