--- a/icon.html
+++ b/icon.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- We  must link font awesome kits to use this in link -->
     <script src="https://kit.fontawesome.com/9ca8f8a346.js" crossorigin="anonymous"></script>
     <style>
         .fa-star,
@@ -20,6 +21,7 @@
 </head>
 
 <body>
+    <!-- font awesome is a very convinient way to use icons  -->
     <!-- explore Icons -->
     <!-- font awesome -->
     <p class="meow">
