--- a/images.html
+++ b/images.html
@@ -14,6 +14,7 @@
 
 <body>
     <img src="images/i2.jpg" alt="">
+    <!-- for image optimization use tinified and photopea to compress the size and resolution of the image -->
     <img src="images/i1.jpeg" alt="">
     <!-- svg and image optimization : should be done to compress images-->
     <!-- icon sprite : is used in game development-->
