--- a/transform.html
+++ b/transform.html
@@ -21,7 +21,8 @@
         .inner {
             background-color: lightcoral;
             /* transform: scale(.75); */
-
+            /* transform: none|transform-functions|initial|inherit; */
+            /* transform is a property which transform a selector or class etc to different view and its now animatable */
             transform: rotate(30deg) scale(.75) translate(50px, 50px);
 
         }
