--- a/transition.html
+++ b/transition.html
@@ -15,7 +15,10 @@
             height: 150px;
             border: 5px solid crimson;
             background-color: coral;
+            /* transition : name duration timing function delay / you can even add transform property by adding ,  */
+            /* transform is a style in CSS which can Rotate(xdeg) / Scale(.1..infinity X times) Etc the selector . */
             transition: width 2s ease, height 2s linear, transform 1s;
+            /*  here transform : Duration*/
             overflow: scroll;
         }
 
