--- a/overflow.html
+++ b/overflow.html
@@ -10,6 +10,7 @@
             width: 500px;
             height: 400px;
             border: 5px solid steelblue;
+            /* overflow is a property which can customize into hidden/clip/scroll/auto */
             /* overflow can be scroll/hidden and even can be x and y axis */
             overflow-x: hidden;
             /* overflow: scroll; */
