--- a/visibility.html
+++ b/visibility.html
@@ -23,10 +23,12 @@
         #box-3 {
             background-color: springgreen;
             /* hidden or visible */
-            /* visibility: hidden; */
+            /* visibility: hidden;  */
+            /* in the code its doesnt replace the place , instead its gets hidden */
             /* another way of hidden but it removes the whole box or element*/
             /* display can be block,inline,none */
             display: none;
+            /* in this case it replaces its place */
         }
 
         #box-4 {
